--- a/backend/package.json
+++ b/backend/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "backend",
+  "name": "backend-finanzas",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Backend para Finanzas Joven",
+  "main": "server.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -11,7 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
-    "express": "^5.2.1",
-    "mongoose": "^9.1.1"
+    "express": "^4.18.2",
+    "mongoose": "^8.0.0"
   }
 }
